# dill

./: CMakeLists.txt  CTestConfig.cmake  CTestCustom.ctest.in  Makefile.am  Makefile.in  acinclude.m4  aclocal.m4  arm5.c  arm5.h  arm5.ops  arm5_rt.c  arm6.c  arm6.h  arm6.ops  arm64.c  arm6_rt.c  arm8.ops  base.ops  config.h.cmake  config.h.in  configure  configure.ac  dill-config.cmake.in  dill-config.in  dill.vcproj  dillConfig.cmake.in  dillConfigVersion.cmake.in  dill_cplus.c  dill_internal.h  dill_pkg.c  dill_util.c  ia64.c  ia64.h  ia64.ops  install_dummy_la  make_dummy_la  powerpc.c  powerpc.h  ppc64le.c  ppc64le.h  (+18 more)
.github/workflows/: build-and-test.yml  triggers.yml
cmake/: AddLibtoolLibrary.cmake  CERCS_package.cmake  CreateLibtoolFile.cmake  FindBinUtils.cmake  FindCERCSProject.cmake  FindLibFFI.cmake
config/: cercs.m4  install-sh  ltmain.sh  ltversion.m4
scripts/ci/gh-actions/: run.sh
scripts/ci/scripts/: post-cdash-status.sh
scripts/ci/setup/: linux.sh
scripts/dashboard/: dill_common.cmake
tests/: CMakeLists.txt  Makefile.am  Makefile.in  call-gen  cplus.cc  ctest.c  pkg_test.c  stest.c  t1.c  test-gen
vtests/: CMakeLists.txt  Makefile.am  Makefile.in  basic_call.c  branch.c  general.ops  loop_reg.c  opt.c  prefix_test.c  t1.c
